--- a/index.html
+++ b/index.html
@@ -240,15 +240,49 @@
 		</div>
 		<br><br>
 		<div class="mail-container">
-			<div class="mail-img">
-				<i class="bi bi-chat-right-text"></i>
-			</div>
-			<div class="update">
-				<h1>Get Updates & More</h1>
-				<p>Thoughtful thoughts to your inbox</p>
-			</div>
-			<div class="mail">
+			<div class="mail-card">
+				<div class="mail-img">
+					<img src="./assets/images/update.svg">
+				</div>
+				<div class="update">
+					<h1>Get Updates & More</h1>
+					<p>Thoughtful thoughts to your inbox</p>
+				</div>
+				<div class="mail">
+					<input type="text" name="mail" placeholder="Your Email" class="text">
+					<button button type="submit" name="submit" class="send-btn">SUBSCRIBE</button>
+				</div>
+				<div class="box"></div>
 			</div>
 		</div>
+		<br><br>
+		
+		<div class="footer">
+			<div class="f-card">
+				<h3 class="f-head">NEED HELP?<span class="line">....</span></h3>
+				<p class="f-para">Follow Us</p>
+				<h2 class="f-head1">+ 91 8130-719-306</h2>
+				<p class="f-para">Call Us</p>
+				<h2 class="f-head1">+ 91 8130-719-306</h2>
+				<p class="f-para">Email For Us</p>
+				<h2 class="f-head1">operations@exploreabroad.co.in</h2>
+			</div>
+			<div class="f-card1">
+				<h3 class="f-head">LINKS<span class="line">....</span></h3>
+				<p class="f-para">Home</p>
+				<p class="f-para">About Us</p>
+				<p class="f-para">Travel News</p>
+			</div>
+			<div class="f-card2">
+				<h3 class="f-head">SUPPORT<span class="line">....</span></h3>
+				<p class="f-para">Contact Us</p>
+				<p class="f-para">Terms & Conditions</p>
+				<p class="f-para">Privacy Policy</p>
+			</div>
+			<div class="f-card3">
+				<h3 class="f-head">SETTING<span class="line">....</span></h3>
+			</div>
+		</div>
+		<br><br>
 	</body>
 </html>
