client section done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="./assets/css/index.css" />
 	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> 
 	  <script src="https://use.fontawesome.com/6874ba9d3a.js"></script>
+	  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
    <body>
 		<section class="about-banners">
 			<div class="navbar">
@@ -58,7 +59,7 @@
 			<svg class="waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L60,128C120,160,240,224,360,234.7C480,245,600,203,720,160C840,117,960,75,1080,80C1200,85,1320,139,1380,165.3L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
 		</section>
 		<br>
-		<div class="container">
+		<div class="containerguide">
 			<div class="left">
 				<div class="image">
 					<img src="./assets/images/localguide.svg" class="img">
@@ -178,11 +179,11 @@
 		<div class="container-destination">
 			<div class="destination-left">
 				<img src="./assets/images/goa.jpg" class="img-destination-left">
-				
+				<h1 class="h1">Goa</h1>
 			</div>
 			<div class="destination-right">
 				<img src="./assets/images/himachal.jpg" class="img-destination-right">
-				
+				<h1 class="h1">Goa</h1>
 			</div>
 		</div>
 		<br>
@@ -238,7 +239,136 @@
 				<img src="./assets/images/mauritius.jpg" class="img-destination1-right">
 			</div>
 		</div>
-		<br><br>
+		<br>
+		
+		 <section id="testimonials">
+        <!--heading--->
+        <div class="testimonial-heading">
+            <span>Comments</span>
+            <h1>Clients Says</h1>
+        </div>
+        <!--testimonials-box-container------>
+        <div class="testimonial-box-container">
+            <!--BOX-1-------------->
+            <div class="testimonial-box">
+                <!--top------------------------->
+                <div class="box-top">
+                    <!--profile----->
+                    <div class="profile">
+                        <!--img---->
+                        <div class="profile-img">
+                            <img src="./assets/images/client.svg" />
+                        </div>
+                        <!--name-and-username-->
+                        <div class="name-user">
+                            <strong>Abhinav Verma</strong>
+                        </div>
+                    </div>
+                    <!--reviews------>
+                    <div class="reviews">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i><!--Empty star-->
+                    </div>
+                </div>
+                <!--Comments---------------------------------------->
+                <div class="client-comment">
+                    <p>I had a great trip to Jim Corbett. Hotel was nice and this company's staff is very helpful. Thank you Explore Abroad!</p>
+                </div>
+            </div>
+            <!--BOX-2-------------->
+            <div class="testimonial-box">
+                <!--top------------------------->
+                <div class="box-top">
+                    <!--profile----->
+                    <div class="profile">
+                        <!--img---->
+                        <div class="profile-img">
+                            <img src="./assets/images/client.svg" />
+                        </div>
+                        <!--name-and-username-->
+                        <div class="name-user">
+                            <strong>Aditya</strong>
+                        </div>
+                    </div>
+                    <!--reviews------>
+                    <div class="reviews">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i><!--Empty star-->
+                    </div>
+                </div>
+                <!--Comments---------------------------------------->
+                <div class="client-comment">
+                    <p>Great experience of NCL Cruise. One of the most organised tour i have ever booked.</p>
+                </div>
+            </div>
+            <!--BOX-3-------------->
+            <div class="testimonial-box">
+                <!--top------------------------->
+                <div class="box-top">
+                    <!--profile----->
+                    <div class="profile">
+                        <!--img---->
+                        <div class="profile-img">
+                            <img src="./assets/images/client.svg" />
+                        </div>
+                        <!--name-and-username-->
+                        <div class="name-user">
+                            <strong>Payal Kharbanda</strong>
+                        </div>
+                    </div>
+                    <!--reviews------>
+                    <div class="reviews">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i><!--Empty star-->
+                    </div>
+                </div>
+                <!--Comments---------------------------------------->
+                <div class="client-comment">
+                    <p>Great Services. Over all Thumbs Up!.</p>
+                </div>
+            </div>
+            <!--BOX-4-------------->
+            <div class="testimonial-box">
+                <!--top------------------------->
+                <div class="box-top">
+                    <!--profile----->
+                    <div class="profile">
+                        <!--img---->
+                        <div class="profile-img">
+                            <img src="./assets/images/client.svg" />
+                        </div>
+                        <!--name-and-username-->
+                        <div class="name-user">
+                            <strong>Deepanshu</strong>
+                        </div>
+                    </div>
+                    <!--reviews------>
+                    <div class="reviews">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i><!--Empty star-->
+                    </div>
+                </div>
+                <!--Comments---------------------------------------->
+                <div class="client-comment">
+                    <p>Superb Experience. i had a great trip to Maldives.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+	
+	<br><br><br>
 		<div class="mail-container">
 			<div class="mail-card">
 				<div class="mail-img">
@@ -278,9 +408,6 @@
 				<p class="f-para">Contact Us</p>
 				<p class="f-para">Terms & Conditions</p>
 				<p class="f-para">Privacy Policy</p>
-			</div>
-			<div class="f-card3">
-				<h3 class="f-head">SETTING<span class="line">....</span></h3>
 			</div>
 		</div>
 		<br><br>
