--- a/islands.html
+++ b/islands.html
@@ -49,6 +49,7 @@
 				</div>
 				<div class="price">
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 21,999</span></p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;5Nights 6Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Beaches</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
 				</div>
@@ -65,6 +66,7 @@
 				</div>
 				<div class="price">
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 15,999</span></p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Beaches</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
 				</div>
@@ -81,6 +83,7 @@
 				</div>
 				<div class="price">
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 18,999</span></p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;4Nights 5Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Beaches</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
 				</div>
@@ -97,6 +100,7 @@
 				</div>
 				<div class="price">
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 28,999</span></p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;6Nights 7Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Beaches</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
 				</div>
@@ -113,6 +117,7 @@
 				</div>
 				<div class="price">
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 30,999</span></p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Beaches</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
 				</div>
@@ -129,6 +134,7 @@
 				</div>
 				<div class="price">
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 28,999</span></p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;5Nights 6Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Beaches</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
 				</div>
