--- a/bali.html
+++ b/bali.html
@@ -4,7 +4,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE-edge" />
       <meta name="viewport" content="width=device-width, intial-scale=1.0" />
       <title>Explore Abroad</title>
-      <link rel="stylesheet" href="./assets/css/sikkim.css" />
+      <link rel="stylesheet" href="./assets/css/bali.css" />
 	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> 
 	  <script src="https://use.fontawesome.com/6874ba9d3a.js"></script>
 	  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
@@ -35,95 +35,78 @@
 			<svg class="waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L60,128C120,160,240,224,360,234.7C480,245,600,203,720,160C840,117,960,75,1080,80C1200,85,1320,139,1380,165.3L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
 		</section>
 		
-		<h1 class="top-destinations">Sikkim : Trending Tours</h1><br>
+		<h1 class="top-destinations">Bali : Trending Tours</h1><br>
 		<div class="container-cards">
 			<div class="cards">
 				<div class="img">
-					<img src="./assets/images/sikkim-img.jpg" class="img1card" >
+					<img src="./assets/images/bali-img.jpg" class="img1card" >
 				</div>
 				<div class="hotel">
-					<p class="para">3 Nights Gangtok- Hotel 100 Patels</p>
-					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Hotel 100 Petals, THAPA GOLAI, Gangtok, Sikkim, India</p>
+					<p class="para">A boisterous Bali vacation</p>
+					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Ramada Bali Sunset Road Kuta, Jalan Sunset Road, Kuta, Badung Regency, Bali, Indonesia</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-					<p class="p">Incredibly alluring, pleasantly boisterous and wreathed in clouds – Gangtok, the capital of ...</p>
+					<p class="p">It isn’t every day that you get to spend quality time ...</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 14,999</span></p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 15,999</span></p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;5Nights 6Days</p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Beaches</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
 				</div>
 			</div>
 			<div class="cards1">
 				<div class="img">
-					<img src="./assets/images/sikkim-img1.jpg" class="img1card" >
+					<img src="./assets/images/bali-img1.jpg" class="img1card" >
 				</div>
 				<div class="hotel">
-					<p class="para">3 Nights Gangtok- The Golden Crest</p>
-					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;The Golden Crest Hotel, National Highway 10, Amdo Golai, Deorali Bazar, Gangtok, Sikkim, India</p>
+					<p class="para">Best 5 Nights 6 Days Romantic Bali Honeymoon Packages</p>
+					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Lavender Villa and Spa, Jalan Bypass Ngurah Rai, Kuta, Badung Regency, Bali, Indonesia</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
-					<p class="p">Incredibly alluring, pleasantly boisterous and wreathed in clouds – Gangtok, the capital of ...</p>
+					<p class="p">Book an exotic 5 nights 6 days Bali honeymoon package for an indelible holiday ....</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 17,999</span></p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 29,999</span></p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;5Nights 6Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
 				</div>
 			</div>
 			<div class="cards2">
 				<div class="img">
-					<img src="./assets/images/sikkim-img2.jpg" class="img1card" >
+					<img src="./assets/images/bali-img2.jpg" class="img1card" >
 				</div>
 				<div class="hotel">
-					<p class="para">3 Nights Gangtok- Orange Village Resort</p>
-					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Sterling Gangtok - Orange Village, near Sikkim University, Gangtok, Sikkim, India</p>
+					<p class="para">Breezy Bali Honeymoon Package</p>
+					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Mercure Bali Harvestland Kuta, Jalan Bypass Ngurah Rai, Simpang Siur, Badung Regency, Bali, Indonesia</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
-					<p class="p">Incredibly alluring, pleasantly boisterous and wreathed in clouds – Gangtok, the capital of ...</p>
+					<p class="p">Celebrating life with your better-half gets even more exciting as you book ....</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 24,999</span></p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 29,999</span></p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;4Nights 5Days</p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Beaches</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
 				</div>
 			</div>
 			<div class="cards3">
 				<div class="img">
-					<img src="./assets/images/sikkim-img3.jpg" class="img1card" >
+					<img src="./assets/images/bali-img3.jpg" class="img1card" >
 				</div>
 				<div class="hotel">
-					<p class="para">3 Nights Darjeeling- Mount Himalayan Resort</p>
-					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Mount Himalayan Resort, Darjeeling, Gandhi Road, Limbugaon, Darjeeling, West Bengal, India</p>
+					<p class="para">Jubilant Bali Family Package</p>
+					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Swiss-Belhotel Tuban, Jalan Kubu Anyar, Tuban, Badung Regency, Bali, Indonesia</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
-					<p class="p">Incredibly alluring, pleasantly boisterous and wreathed in clouds – Gangtok, the capital of ...</p>
+					<p class="p">A 4 nights 5 days Bali Family Package brings you the best of Bali ...</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 15,999</span></p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
-					<button type="button" class="btn btn-outline-primary">View Tour</button>
-				</div>
-			</div>
-			<div class="cards4">
-				<div class="img">
-					<img src="./assets/images/sikkim-img4.jpg" class="img1card" >
-				</div>
-				<div class="hotel">
-					<p class="para">3 Nights Darjeeling- Hotel Dip Place</p>
-					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Hotel Dip Palace, near भारतीय स्टेट बैंक, Chauk Bazaar, Darjeeling, West Bengal, India</p>
-					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
-					<p class="p">Incredibly alluring, pleasantly boisterous and wreathed in clouds – Gangtok, the capital of ...</p>
-				</div>
-				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 13,999</span></p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 24,999</span></p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;4Nights 5Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
 				</div>
 			</div>
 		</div>
-		<p class="tour">5 of 5 Tour</p>
+		<p class="tour">4 of 4 Tour</p>
 		<br><br><br>
 		<div class="mail-container">
 			<div class="mail-card">
