--- a/mauritius.html
+++ b/mauritius.html
@@ -4,7 +4,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE-edge" />
       <meta name="viewport" content="width=device-width, intial-scale=1.0" />
       <title>Explore Abroad</title>
-      <link rel="stylesheet" href="./assets/css/ladakh.css" />
+      <link rel="stylesheet" href="./assets/css/mauritius.css" />
 	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> 
 	  <script src="https://use.fontawesome.com/6874ba9d3a.js"></script>
 	  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
@@ -35,22 +35,23 @@
 			<svg class="waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L60,128C120,160,240,224,360,234.7C480,245,600,203,720,160C840,117,960,75,1080,80C1200,85,1320,139,1380,165.3L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
 		</section>
 		
-		<h1 class="top-destinations">Ladakh : Trending Tours</h1><br>
+		<h1 class="top-destinations">Mauritius : Trending Tours</h1><br>
 		<div class="container-cards">
 			<div class="cards">
 				<div class="img">
-					<img src="./assets/images/ladakh1.jpeg" class="img1card" >
+					<img src="./assets/images/mauritius-img.jpeg" class="img1card" >
 				</div>
 				<div class="hotel">
-					<p class="para">Magical Ladakh 4 Nights 5 Days</p>
-					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Leh</p>
+					<p class="para">Alluring Mauritius 7 Days Honeymoon</p>
+					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Mauritius</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+					<p class="p">Book a 6 nights 7 days Mauritius honeymoon package for a delightful honeymoon in ...</p>
 					<p class="p"></p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 30,999</span></p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;4Nights 5Days</p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 46,999</span></p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;6Nights 7Days</p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Honeymoon</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
 				</div>
 			</div>
