--- a/thailand.html
+++ b/thailand.html
@@ -4,7 +4,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE-edge" />
       <meta name="viewport" content="width=device-width, intial-scale=1.0" />
       <title>Explore Abroad</title>
-      <link rel="stylesheet" href="./assets/css/ladakh.css" />
+      <link rel="stylesheet" href="./assets/css/thailand.css" />
 	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> 
 	  <script src="https://use.fontawesome.com/6874ba9d3a.js"></script>
 	  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
@@ -35,29 +35,44 @@
 			<svg class="waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L60,128C120,160,240,224,360,234.7C480,245,600,203,720,160C840,117,960,75,1080,80C1200,85,1320,139,1380,165.3L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
 		</section>
 		
-		<h1 class="top-destinations">Ladakh : Trending Tours</h1><br>
+		<h1 class="top-destinations">Thailand : Trending Tours</h1><br>
 		<div class="container-cards">
 			<div class="cards">
 				<div class="img">
-					<img src="./assets/images/ladakh1.jpeg" class="img1card" >
+					<img src="./assets/images/thailand-img.jpeg" class="img1card" >
 				</div>
 				<div class="hotel">
-					<p class="para">Magical Ladakh 4 Nights 5 Days</p>
-					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Leh</p>
+					<p class="para">Best Bangkok & Phuket Honeymoon Package for a Pocket Friendly Vacation</p>
+					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;APK RESORT AND SPA ถนน ผังเมืองสาย ก Pa Tong, Kathu District, Phuket, Thailand</p>
 					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-					<p class="p"></p>
+					<p class="p">Hatching out a honeymoon destination to give your marital life a perfect ...</p>
 				</div>
 				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 30,999</span></p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;4Nights 5Days</p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 25,999</span></p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;5Nights 6Days</p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Beaches</p>
 					<button type="button" class="btn btn-outline-primary">View Tour</button>
 				</div>
 			</div>
-			
-			
+			<div class="cards1">
+				<div class="img">
+					<img src="./assets/images/thailand-img1.jpeg" class="img1card" >
+				</div>
+				<div class="hotel">
+					<p class="para">Top Selling 3 Nights And 4 Days Pattaya Tour Packages</p>
+					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Grand Bella Hotel Pattaya, Pattaya City, Bang Lamung District, Chon Buri, Thailand</p>
+					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+					<p class="p">Trip Location: Pattaya, Thailand Destinations Covered: 3N Pattaya Start Point: Bangkok International ...</p>
+				</div>
+				<div class="price">
+					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 26,999</span></p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;3Nights 4Days</p>
+					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Beaches</p>
+					<button type="button" class="btn btn-outline-primary">View Tour</button>
+				</div>
+			</div>
 		</div>
-		<p class="tour">1 of 1 Tour</p>
+		<p class="tour">2 of 2 Tour</p>
 		<br><br><br>
 		<div class="mail-container">
 			<div class="mail-card">
