--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Leh</p>
 						</div>
 						<div class="hotel">
-							<p class="cards-para2"><a href="">Magical Ladakh</a></p>
+							<p class="cards-para2"><a href="slide1.html">Magical Ladakh</a></p>
 						</div>
 						<div class="stay">
 							<p class="cards-para"><span class="cards-span"><i class="bi bi-calendar-week"></i></span>&nbsp;&nbsp;5 Days & 4 Nights</p>
@@ -239,7 +239,6 @@
 			</div>
 			<div class="destination1-middle">
 				<a href="dubai.html"><img src="./assets/images/dubai.jpeg" class="img-destination1-middle"></a>
-				
 			</div>
 			<div class="destination1-right">
 				<a href="mauritius.html"><img src="./assets/images/mauritius.jpeg" class="img-destination1-right"></a>
