--- a/slide1.html
+++ b/slide1.html
@@ -175,7 +175,33 @@
 					
 				</div>
 			</div>
-			<div class="right-box1"></div>
+			<div class="right-box1">
+				<div class="right-top">
+					<ul class="list-group">
+						<li class="p-4 list-group-item active" aria-current="true">from &nbsp;<span class="cont">Rs. 30,999</span></li>
+						<li class="list-group-item"><strong>Inquiry</strong></li>
+						<li class="list-group-item">
+							<form class="form">
+								<div class="textbox"><input type="text" name="fullname" placeholder="Name" class="input" required></div>
+								<div class="textbox"><input type="email" name="mail" placeholder="Email" class="input" required></div>
+								<div class="textbox"><input type="number" name="contact" placeholder="Phone" class="input" required></div>
+								<div class="textbox"><textarea name="message" rows="3" cols="30" placeholder="Note"></textarea></div>
+								<button type="button" class="btn btn-primary">Send</button>
+							</form>
+						</li>
+					</ul>
+				</div>
+				<div class="org">
+					<ul class="list-group">
+						<li class="p-3 list-group-item"><span class="cont">Organized By</span><br>Explore Abroad</li>
+					</ul>
+				</div>
+				<div class="contact">
+					<ul class="list-group">
+						<li class="p-3 list-group-item"><span class="cont">Information Contact</span><br><span class="info"><strong>Email</strong><br></span>operations@exploreabroad.co.in<br><br><strong>Phone</strong>+ 91 8130-719-306</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 		<br><br>
 		<!--footer--start-->
