--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="navbar">
 				<nav>
 					<input id="nav-toggle" type="checkbox">
-					<a href="index.html"><img src="./assets/images/Lexiphar Logo.png" class="logo"></a>
+					<a href="index.html"><img src="./assets/images/EXPLORELOGO3.png" class="logo"></a>
 					<ul>
 						<li><a href="#">HOME</a></li>
 						<li><a href="#">ABOUT US</a></li>
