--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 							<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;The Zuri White Sands, Goa Resort & Casino, Pedda, Varca, Goa, India</p>
 						</div>
 						<div class="hotel">
-							<p class="cards-para2"><a href="">Zuri White Sands</a></p>
+							<p class="cards-para2"><a href="zuhi.html">Zuri White Sands</a></p>
 						</div>
 						<div class="stay">
 							<p class="cards-para"><span class="cards-span"><i class="bi bi-calendar-week"></i></span>&nbsp;&nbsp;4 Days & 3 Nights</p>
@@ -148,7 +148,7 @@
 							<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Hotel K.D.'s Villa, Siyal, Manali, Himachal Pradesh, India</p>
 						</div>
 						<div class="hotel">
-							<p class="cards-para2"><a href="">KD's Villa Manali</a></p>
+							<p class="cards-para2"><a href="kd.html">KD's Villa Manali</a></p>
 						</div>
 						<div class="stay">
 							<p class="cards-para"><span class="cards-span"><i class="bi bi-calendar-week"></i></span>&nbsp;&nbsp;6 Days & 5 Nights</p>
@@ -167,7 +167,7 @@
 							<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Hotel Naveen, Siyal, Manali, Himachal Pradesh, India</p>
 						</div>
 						<div class="hotel">
-							<p class="cards-para2"><a href="">Hotel Naveen Manali</a></p>
+							<p class="cards-para2"><a href="naveen.html">Hotel Naveen Manali</a></p>
 						</div>
 						<div class="stay">
 							<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;6 Days & 5 Nights</p>
