--- a/ladakh.html
+++ b/ladakh.html
@@ -16,7 +16,9 @@
 					<input id="nav-toggle" type="checkbox">
 					<a href="index.html"><img src="./assets/images/EXPLORELOGO3.png" class="logo"></a>
 					<ul>
-						<li><a href="#">HOME</a></li>
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="domestic.html">DOMESTIC PACKAGES</a></li>
+						<li><a href="international.html">INTERNATIONAL PACKAGES</a></li>
 						<li><a href="#">ABOUT US</a></li>
 						<li><a href="#">CONTACT US</a></li>
 						<li><a href="#">TRAVEL NEWS</a></li>
@@ -51,7 +53,7 @@
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 30,999</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;4Nights 5Days</p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
-					<button type="button" class="btn btn-outline-primary">View Tour</button>
+					<button type="button" class="btn btn-outline-primary"><a href="slide1.html">View Tour</a></button>
 				</div>
 			</div>
 			
