--- a/sikkim.html
+++ b/sikkim.html
@@ -3,7 +3,7 @@
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE-edge" />
       <meta name="viewport" content="width=device-width, intial-scale=1.0" />
-      <title>Explore Abroad</title>
+      <title>Sikkim-Explore Abroad</title>
       <link rel="stylesheet" href="./assets/css/sikkim.css" />
 	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> 
 	  <script src="https://use.fontawesome.com/6874ba9d3a.js"></script>
@@ -16,7 +16,9 @@
 					<input id="nav-toggle" type="checkbox">
 					<a href="index.html"><img src="./assets/images/EXPLORELOGO3.png" class="logo"></a>
 					<ul>
-						<li><a href="#">HOME</a></li>
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="domestic.html">DOMESTIC PACKAGES</a></li>
+						<li><a href="international.html">INTERNATIONAL PACKAGES</a></li>
 						<li><a href="#">ABOUT US</a></li>
 						<li><a href="#">CONTACT US</a></li>
 						<li><a href="#">TRAVEL NEWS</a></li>
