--- a/himachal.html
+++ b/himachal.html
@@ -16,7 +16,9 @@
 					<input id="nav-toggle" type="checkbox">
 					<a href="index.html"><img src="./assets/images/EXPLORELOGO3.png" class="logo"></a>
 					<ul>
-						<li><a href="#">HOME</a></li>
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="domestic.html">DOMESTIC PACKAGES</a></li>
+						<li><a href="international.html">INTERNATIONAL PACKAGES</a></li>
 						<li><a href="#">ABOUT US</a></li>
 						<li><a href="#">CONTACT US</a></li>
 						<li><a href="#">TRAVEL NEWS</a></li>
@@ -50,7 +52,7 @@
 				<div class="price">
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 8,999</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
-					<button type="button" class="btn btn-outline-primary">View Tour</button>
+					<button type="button" class="btn btn-outline-primary"><a href="kd.html">View Tour</a></button>
 				</div>
 			</div>
 			<div class="cards1">
@@ -66,7 +68,7 @@
 				<div class="price">
 					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 9,299</span></p>
 					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
-					<button type="button" class="btn btn-outline-primary">View Tour</button>
+					<button type="button" class="btn btn-outline-primary"><a href="naveen.html">View Tour</a></button>
 				</div>
 			</div>
 			<div class="cards2">
