--- a/islands.html
+++ b/islands.html
@@ -16,7 +16,9 @@
 					<input id="nav-toggle" type="checkbox">
 					<a href="index.html"><img src="./assets/images/EXPLORELOGO3.png" class="logo"></a>
 					<ul>
-						<li><a href="#">HOME</a></li>
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="domestic.html">DOMESTIC PACKAGES</a></li>
+						<li><a href="international.html">INTERNATIONAL PACKAGES</a></li>
 						<li><a href="#">ABOUT US</a></li>
 						<li><a href="#">CONTACT US</a></li>
 						<li><a href="#">TRAVEL NEWS</a></li>
