--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 					<a href="index.html"><img src="./assets/images/EXPLORELOGO3.png" class="logo"></a>
 					<ul>
 						<li><a href="index.html">HOME</a></li>
-						<li><a href="domestic.html">DOMESTIC PACKAGES</a></li>
-						<li><a href="international.html">INTERNATIONAL PACKAGES</a></li>
+						<li><a href="domestic.html">DOMESTIC</a></li>
+						<li><a href="international.html">INTERNATIONAL</a></li>
 						
-						<li><a href="setting.html">ABOUT US</a></li>
-						<li><a href="setting.html">CONTACT US</a></li>
-						<li><a href="setting.html">TRAVEL NEWS</a></li>
+						<li><a href="about.html">ABOUT US</a></li>
+						<li><a href="contact.html">CONTACT US</a></li>
+						<li><a href="travel.html">TRAVEL NEWS</a></li>
 					</ul>
 					<label for="nav-toggle" class="icon-burger">
 						<div class="line"></div>
@@ -445,9 +445,9 @@
 			</div>
 			<div class="f-card1">
 				<h3 class="f-head">LINKS<span class="line">....</span></h3>
-				<p class="f-para">Home</p>
-				<p class="f-para">About Us</p>
-				<p class="f-para">Travel News</p>
+				<a href="index.html"style="text-decoration:none; color:black;"><p class="f-para">Home</p></a>
+				<a href="about.html"style="text-decoration:none; color:black;"><p class="f-para">About Us</p></a>
+				<a href="travel.html"style="text-decoration:none; color:black;"><p class="f-para">Travel News</p></a>
 			</div>
 			<div class="f-card2">
 				<h3 class="f-head">SUPPORT<span class="line">....</span></h3>
