--- a/sikkim.html
+++ b/sikkim.html
@@ -17,8 +17,8 @@
 					<a href="index.html"><img src="./assets/images/EXPLORELOGO3.png" class="logo"></a>
 					<ul>
 						<li><a href="index.html">HOME</a></li>
-						<li><a href="domestic.html">DOMESTIC PACKAGES</a></li>
-						<li><a href="international.html">INTERNATIONAL PACKAGES</a></li>
+						<li><a href="domestic.html">DOMESTIC</a></li>
+						<li><a href="international.html">INTERNATIONAL</a></li>
 						<li><a href="setting.html">ABOUT US</a></li>
 						<li><a href="setting.html">CONTACT US</a></li>
 						<li><a href="setting.html">TRAVEL NEWS</a></li>
