--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,26 @@
+<!--doctype html-->
 <html>
    <head>
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE-edge" />
       <meta name="viewport" content="width=device-width, intial-scale=1.0" />
-      <title>Explore Abroad</title>
-      <link rel="stylesheet" href="./assets/css/ladakh.css" />
+      <title>Contact Us-Explore Abroad</title>
+      <link rel="stylesheet" href="./assets/css/contact.css" />
 	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> 
 	  <script src="https://use.fontawesome.com/6874ba9d3a.js"></script>
 	  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 	</head>
-	<body>
-		<section class="about-banners">
+   <body>
+	<section class="about-banners">
 			<div class="navbar">
 				<nav>
 					<input id="nav-toggle" type="checkbox">
 					<a href="index.html"><img src="./assets/images/EXPLORELOGO3.png" class="logo"></a>
 					<ul>
 						<li><a href="index.html">HOME</a></li>
-						<li><a href="domestic.html">DOMESTIC PACKAGES</a></li>
-						<li><a href="international.html">INTERNATIONAL PACKAGES</a></li>
+						<li><a href="domestic.html">DOMESTIC</a></li>
+						<li><a href="international.html">INTERNATIONAL</a></li>
+						
 						<li><a href="about.html">ABOUT US</a></li>
 						<li><a href="contact.html">CONTACT US</a></li>
 						<li><a href="travel.html">TRAVEL NEWS</a></li>
@@ -31,35 +33,47 @@
 				</nav>
 			</div>
 			<div class="banner-text">
-				<p class="main-header"data-text="Love where you're going">Love where you're going</p>
-				<p class="main-para">Book incredible things to do around the world.</p>
+				<p class="main-header">Contact Us</p>
 			</div>
 			<svg class="waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L60,128C120,160,240,224,360,234.7C480,245,600,203,720,160C840,117,960,75,1080,80C1200,85,1320,139,1380,165.3L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
 		</section>
 		
-		<h1 class="top-destinations">Ladakh : Trending Tours</h1><br>
-		<div class="container-cards">
-			<div class="cards">
-				<div class="img">
-					<img src="./assets/images/ladakh1.jpeg" class="img1card" >
-				</div>
-				<div class="hotel">
-					<p class="para">Magical Ladakh 4 Nights 5 Days</p>
-					<p class="cards-para"><span class="cards-span"><i class="bi bi-geo"></i></span>&nbsp;&nbsp;Leh</p>
-					<p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-					<p class="p"></p>
-				</div>
-				<div class="price">
-					<p class="price-p"><span class="light"><i class="bi bi-lightning-fill"></i></span>&nbsp;&nbsp;from&nbsp;&nbsp;<span class="tag">Rs. 30,999</span></p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-calendar-range"></i></span>&nbsp;&nbsp;4Nights 5Days</p>
-					<p class="price-p2"><span class="emoji"><i class="bi bi-emoji-heart-eyes"></i></span>&nbsp;&nbsp;Adventure</p>
-					<button type="button" class="btn btn-outline-primary"><a href="slide1.html">View Tour</a></button>
+		<div class="contact">
+			<div class="form">
+				<div class="box">
+				<form method="post" autocomplete="off">
+				<label>Name</label><br>
+				<input type="text" name="name" placeholder="&nbsp;Enter Your Complete Name" class="input" required><br>
+				<label>Email</label><br>
+				<input type="email" name="mail" placeholder="Enter Your Valid Email" class="input" required><br>
+				<label>Contact</label><br>
+				<input type="tel" name="phone" placeholder="Enter Your Valid Contact Number" class="input" required><br>
+				<label>Message</label><br>
+				<input type="text" name="message" placeholder="Enter Your Message" class="input" required><br>
+				<button type="button" class="btn">Submit</button>
+				</form>
 				</div>
 			</div>
 			
-			
+			<div class="content">
+				<div class="box2">
+					<h3 class="head3">Contact Us</h3>
+					<p class="para1">Address:</p>
+					<p class="para">Plot no 31-32</p>
+					<p class="para">Vishnu Garden Opposite Civil Hospital</p>
+					<p class="para">Jagadhri-135003</p>
+				</div>
+				<div class="box2">
+					<p class="para1">Contact No:</p>
+					<p class="para">+ 91 8130-719-306</p>
+				</div>
+				<div class="box2">
+					<p class="para1">Mail ID:</p>
+					<p class="para">operations@exploreabroad.co.in</p>
+				</div>
+			</div>
 		</div>
-		<p class="tour">1 of 1 Tour</p>
+		
 		<br><br><br>
 		<div class="mail-container">
 			<div class="mail-card">
@@ -74,11 +88,10 @@
 					<input type="text" name="mail" placeholder="Your Email" class="text">
 					<button button type="submit" name="submit" class="send-btn">SUBSCRIBE</button>
 				</div>
-				<div class="box"></div>
+				<div class="box-mail"></div>
 			</div>
 		</div>
 		<br><br>
-		
 		<div class="footer">
 			<div class="f-card">
 				<h3 class="f-head">NEED HELP?<span class="line">....</span></h3>
@@ -103,5 +116,5 @@
 			</div>
 		</div>
 		<br><br>
-	</body>
+   </body>
 </html>
