--- a/singapore.html
+++ b/singapore.html
@@ -18,9 +18,9 @@
 					<ul><li><a href="index.html">HOME</a></li>
 						<li><a href="domestic.html">DOMESTIC PACKAGES</a></li>
 						<li><a href="international.html">INTERNATIONAL PACKAGES</a></li>
-						<li><a href="#">ABOUT US</a></li>
-						<li><a href="#">CONTACT US</a></li>
-						<li><a href="#">TRAVEL NEWS</a></li>
+						<li><a href="about.html">ABOUT US</a></li>
+						<li><a href="contact.html">CONTACT US</a></li>
+						<li><a href="travel.html">TRAVEL NEWS</a></li>
 					</ul>
 					<label for="nav-toggle" class="icon-burger">
 						<div class="line"></div>
@@ -91,9 +91,9 @@
 			</div>
 			<div class="f-card1">
 				<h3 class="f-head">LINKS<span class="line">....</span></h3>
-				<p class="f-para">Home</p>
-				<p class="f-para">About Us</p>
-				<p class="f-para">Travel News</p>
+				<a href="index.html"style="text-decoration:none; color:black;"><p class="f-para">Home</p></a>
+				<a href="about.html"style="text-decoration:none; color:black;"><p class="f-para">About Us</p></a>
+				<a href="travel.html"style="text-decoration:none; color:black;"><p class="f-para">Travel News</p></a>
 			</div>
 			<div class="f-card2">
 				<h3 class="f-head">SUPPORT<span class="line">....</span></h3>
