whatsapp & vtd correction

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@ We manage better due to the assistance of our well-trained team and team members
 				</div>
 				<div class="why-content">
 					<h3>Customer Price</h3>
-					<p>Happiness of our clients is a sense of achievement at VTD Tourism. We are thankful to our eminent clients that they choose us to experience the class in planning, organising, and executing their Business Meets, Events or more!</p>
+					<p>Happiness of our clients is a sense of achievement at Explore Abroad. We are thankful to our eminent clients that they choose us to experience the class in planning, organising, and executing their Business Meets, Events or more!</p>
 				</div>
 			</div>
 			<div class="why-cards">
@@ -64,7 +64,7 @@ We manage better due to the assistance of our well-trained team and team members
 				</div>
 				<div class="why-content">
 					<h3>Authentic Price</h3>
-					<p>Quality is delivered at VTD Tourism. Our services are uniquely designed & implemented to serve nothing but value to our clients. That is a prominent reason for making them pay just the competitive price for what we offer.</p>
+					<p>Quality is delivered at Explore Abroad. Our services are uniquely designed & implemented to serve nothing but value to our clients. That is a prominent reason for making them pay just the competitive price for what we offer.</p>
 				</div>
 			</div>
 			<div class="why-cards">
@@ -73,7 +73,7 @@ We manage better due to the assistance of our well-trained team and team members
 				</div>
 				<div class="why-content">
 					<h3>Companionship</h3>
-					<p>We fully believe in making bonding with our clients by understanding their needs and fulfilling their expectations. At VTD Tourism, we conquer the challenges in delivering the best out of our expertise in Destination Management Services.</p>
+					<p>We fully believe in making bonding with our clients by understanding their needs and fulfilling their expectations. At Explore Abroad, we conquer the challenges in delivering the best out of our expertise in Destination Management Services.</p>
 				</div>
 			</div>
 			<div class="why-cards">
@@ -159,7 +159,7 @@ We manage better due to the assistance of our well-trained team and team members
 		
 		<br><br>
 		<h1 class="top-destinations">FIT And Groups</h1><br>
-		<p class="fit">VTD team for FITs and GROUPs strive to deliver best of travel solutions to suit the customer’s needs without compromising quality, thus helping you create memories. Your travel is our pleasure too.</p><br>
+		<p class="fit">Explore team for FITs and GROUPs strive to deliver best of travel solutions to suit the customer’s needs without compromising quality, thus helping you create memories. Your travel is our pleasure too.</p><br>
 		<br><div class="objective">
 			<div class="obj-cards">
 				<div class="obj-subcard">
