--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 	  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 	</head>
    <body id="blur">
-		<div class="fixed">
+		<div class="whatsapp">
+			<a href="https://wa.me/918130719306" target="_blank" class="whatslink"><img src="./assets/images/whatsicon.png" class="whatsicon"></a>
+		</div>
+		<!--<div class="fixed">
 			<h4 class="h4">
 				<a href="popup.html" class="fixed-link">View Form</a>
 			</h4>
-		</div>
+		</div>-->
 		<section class="about-banners">
 			<div class="navbar">
 				<nav>
